# California-housing-prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_analysis.py
california_housing/: __init__.py  config.py  dataset.py  features.py  plots.py
california_housing/modeling/: __init__.py  predict.py  train.py
references/: data_dictionary.md  problem_statement.md
