[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "california-housing"
version = "1.0.0"
description = "Random Forest regression model for California housing price prediction"
authors = [{name = "Hayatudeen Nurudeen", email = "hayatudeennurudeen@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["california_housing*"]
